# fudge-suite

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_fudge.slurm  runner.py
experiments/: fudge_results.csv  gather_prelim_data.sh  plot_results.py  run_all_experiments.sh  run_baseline.sh
src/: audit.py  client.py  dataset.py  model.py  server.py  strategies.py  triggers.py  unlearning.py
