[project]
name = "fudge-suite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "amqp==5.3.1",
    "billiard==4.2.4",
    "celery==5.6.2",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "contourpy==1.3.3",
    "cryptography==44.0.3",
    "cycler==0.12.1",
    "filelock==3.24.3",
    "flower==2.0.1",
    "flwr==1.26.1",
    "fonttools==4.62.0",
    "fsspec==2026.2.0",
    "grpcio==1.78.1",
    "grpcio-health-checking==1.78.1",
    "humanize==4.15.0",
    "idna==3.11",
    "iterators==0.0.2",
    "jinja2==3.1.6",
    "kiwisolver==1.5.0",
    "kombu==5.6.2",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.1",
    "pathspec==0.12.1",
    "pillow==12.1.1",
    "prometheus-client==0.24.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.5",
    "pycparser==3.0",
    "pycryptodome==3.23.0",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==13.9.4",
    "scipy==1.17.1",
    "setuptools==82.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sqlalchemy==2.0.47",
    "sympy==1.14.0",
    "tomli==2.4.0",
    "tomli-w==1.2.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tornado==6.5.4",
    "typer==0.20.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "urllib3==2.6.3",
    "vine==5.1.0",
    "wcwidth==0.6.0",
]
